# bioimageit

./: .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  bioimageit.py  bioimageit.spec  entitlements.plist  pyflow.py  pyproject.toml  sign_and_notarize.py  workflow.py
Configs/: input.json  omero_proxy.config
PyFlow/: App.py  ConfigManager.py  ErrorManager.py  UpdateManager.py  WorkflowManager.py  __init__.py  app.css  invoke_in_main.py
PyFlow/Configs/: bckp_config.ini  config.ini  config_bckp2.ini  config_bckp3.ini  config_bckp4.ini  prefs.ini
PyFlow/Core/: Common.py  EvaluationEngine.py  GraphBase.py  GraphManager.py  NodeBase.py  OmeroService.py  PinBase.py  Worker.py  __init__.py
PyFlow/Scripts/: .gitignore_template  ExampleGalaxyToBioImageIT.py  __init__.py  cast_image_example.py  nf_list_files.py  nf_omero.py  nf_process.py  nf_process_data_frame.py  parse_name_example.py  template.py
PyFlow/Tests/: Test_Tools.py
PyFlow/ThumbnailManagement/: ThumbnailGenerator.py  generate_thumbnails.py
PyFlow/ToolManagement/: .mambarc  EnvironmentManager.py  ModuleCaller.py  ToolBase.py  ToolParser.py  ToolTemplate.py  execute_tool.py  testTools.py
PyFlow/Tools/Atlas/: atlas.py
PyFlow/Tools/Cellpose/: cellpose_segment.py  cellpose_train.py
PyFlow/Tools/Convert image/: convert_image.py
PyFlow/Tools/ConvertImage/: convert_image.py
PyFlow/Tools/DataFrames/: ColumnRegex.py  Concat.py  ListFiles.py  Merge.py  generate.py
PyFlow/Tools/ExoDeepFinder/: convert_tiff_to_h5.py  detect_spots.py  exodeepfinder_tool.py  generate_annotation.py  generate_segmentation.py  merge_detector_expert.py  segment.py  structure_training_dataset.py  symlink.py  train.py
PyFlow/Tools/Fiji/: puncta_segmentation.py  stackreg_fiji.py  stackreg_pyimagej.py
PyFlow/Tools/Fiji/StackReg/: stackreg.ijm
PyFlow/Tools/LMSP-LabelsMeasure/: LabelsMeasure.py
PyFlow/Tools/NdSafir/: nd_safir.py  nd_safir_2d.py  nd_safir_3d.py  nd_safir_4d.py
PyFlow/Tools/NdSafir/core/: ndsafir_series.py
PyFlow/Tools/Noise2Self/: noise2self.py
PyFlow/Tools/Omero/: base.py  download.py  omero_download.py  omero_import.py  omero_upload.py  upload.py
PyFlow/Tools/SAM/: sam.py
PyFlow/Tools/STED-MATIRF/: matirf.py  matirf_localize.py
PyFlow/Tools/STED-MATIRF/scripts/: matirf_sequence.py
PyFlow/Tools/STracking/: stracking_detection.py  stracking_linker.py
PyFlow/Tools/Sairpico/: GaussianPSF.py  GibsonLanniPSF.py  HotSpot.py  Richardson-Lucy.py  Spitfire_Deconv.py  Weiner_Deconv.py  cimg_denoising.py  median_denoising.py
PyFlow/Tools/SimpleITK/: binary_threshold.py  connected_components.py  extract_channel.py  label_overlaps.py  label_statistics.py  subtract_images.py
PyFlow/Tools/Spitfire/: spitfire.py  spitfire_2d.py  spitfire_3d.py  spitfire_4d.py
PyFlow/Tools/Stardist/: stardist_segment.py
PyFlow/Tools/__pycache__/: tool.cpython-38.pyc.140336043299504
PyFlow/Tools/clEsperanto/: clEsperanto_3d_segmentation.py  clEsperanto_basic_stats.py  clEsperanto_beads.py  clEsperanto_cell_segmentation.py  clEsperanto_count.py  clEsperanto_count_nuclei.py  clEsperanto_deskew.py  clEsperanto_intensity_stats.py  clEsperanto_segmeasure.py  clEsperanto_tool.py  clEsperanto_voronoi.py
PyFlow/Tools/cudaDecon/: cudaDecon.py  cudaDecon_deskew.py
PyFlow/UI/: CompileUiQt.py
PyFlow/UI/Canvas/: CanvasBase.py  Painters.py  UICommon.py  UIConnection.py  UINodeBase.py  UIPinBase.py
PyFlow/UI/Tool/: Tool.py
PyFlow/UI/Utils/: stylesheet.py
PyFlow/UI/Views/: NodeBox.py
PyFlow/UI/Widgets/: BlueprintCanvas.py  FileDialog.py  PreferencesWindow.py  PropertiesFramework.py  QtSliders.py  SelectPinDialog.py
PyFlow/UI/resources/: Logo.icns
PyFlow/Viewer/: NapariManager.py  __init__.py
Scripts/: SimpleITK_reference.html  convert_tool_info_to_class.py  convert_tools_format.py  copy_test_data.py  parse_sitk_functions.py  process_tools_scripts.py  simpleITK_functions.json  tool_to_galaxy.py  unsign_bioimageit.py  upload_release.py  workflow.py
docs/: conf.py  download.md  index.md  tutorials.md
docs/documentation/: FAQ.md  api.md  create_tool.md  getting_started.md  gui.md  parameter_exploration.md  parameters_exploration.md  settings.md  tutorial_bonus.md
docs/documentation/nodes/: list_files.md
website/: changelog.md  community.md.bckp  conf.py  contributing.md  download.md  events.md.bckp  get_started.md  index.md  license.md
website/documentation/: api.md  documentation.md  gui.md  outputs.md  parameters_exploration.md  settings.md  tool_integration.md
website/documentation/nodes/: list_files.md  nodes.md
website/documentation/tutorials/: FOLS2_and_CSF1R_detection.md  contours_distance_computation.md  tutorials.md.bckp
