[project]
name = "bioimageit"
version = "0.3.3"
description = "A FAIR data management and image analysis framework"
authors = [{name = "Arthur Masson", email = "arthur.masson@inria.fr"}]
license = { file = "LICENSE" }
# requires-python = ">= 3.10.2, <3.11"
requires-python = "==3.10.8"
dependencies = ["omero-py==5.15.0",
                "simpleitk>=2.3.1, <2.4",
                "qtpy>=2.4.1,<3",
                "blinker>=1.8.2,<2",
                "keyring>=25.2.1,<26",
                "numpy>=2.0.1,<3",
                "pandas>=2.2.2,<3",
                "pillow>=10.4.0,<11",
                "pyside6>=6.7.2,<7", 
                "pyside6-qtads>=4.3.0.2,<5", 
                "munch>=4.0.0,<5", 
                "send2trash>=1.8.3,<2", "mailjet-rest>=1.3.4,<2", "typing-extensions==4.12.2"]

[project.optional-dependencies]
install = ["pyinstaller"]
cxf = ["cx_Freeze"]
ipython = ["ipython"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
biit = "PyFlow"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
bioimageit = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
zeroc-ice = "==3.6.5"

# Environments
[tool.pixi.environments]
default = { solve-group = "default" }
install = { features = ["install"], solve-group = "default" }
cxf = { features = ["cxf"], solve-group = "default" }
dev = { features = ["ipython"], solve-group = "default" }

[tool.pixi.feature.cxf.tasks]
build_cxf = "cxfreeze build"

# CX Freeze (not used yet, using pyinstaller instead)
[tool.cxfreeze]
executables = [
    {script = "pyflow.py", base = "gui"}
]

[tool.cxfreeze.build_exe]
packages = ["SimpleITK",
            "qtpy",
            "blinker",
            "keyring",
            "numpy",
            "pandas",
            "PIL",
            "PySide6",
            "munch",
            "send2trash",
            "mailjet_rest",
            "typing_extensions"]
zip_exclude_packages = []
excludes = ["pyinstaller"]
bin_path_includes = ["/System/Volumes/Preboot/Cryptexes/OS/usr/lib/"]
