[project]
name = "bioimageit"
version = "0.3.9"
description = "A FAIR data management and image analysis framework"
authors = [{name = "Arthur Masson", email = "arthur.masson@inria.fr"}]
license = { file = "LICENSE" }
# requires-python = ">= 3.10.2, <3.11"
requires-python = "==3.10.8"
dependencies = ["omero-py==5.15.0",
                "simpleitk>=2.3.1, <2.4",
                "qtpy>=2.4.1,<3",
                "blinker>=1.8.2,<2",
                "keyring>=25.2.1,<26",
                "numpy>=2.0.1,<3",
                "pandas>=2.2.2,<3",
                "pillow>=10.4.0,<11",
                "pyside6>=6.7.2,<7", 
                "pyside6-qtads>=4.3.0.2,<5", 
                "munch>=4.0.0,<5", 
                "send2trash>=1.8.3,<2", 
                "mailjet-rest>=1.3.4,<2", 
                "typing-extensions==4.12.2", "h5py==3.11.0", "psutil>=6.1.0,<7"]

[project.optional-dependencies]
install = ["pyinstaller"]
package = ["requests>=2.32.3, <2.33", "psutil>=6.1.0,<7"]
ipython = ["ipython", "ipdb"]

[tool.pixi.feature.package.dependencies]
python = "3.12"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
biit = "PyFlow"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
bioimageit = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
zeroc-ice = "==3.6.5"

# Environments
[tool.pixi.environments]
default = { solve-group = "default" }
install = { features = ["install"], solve-group = "default" }
dev = { features = ["ipython"], solve-group = "default" }
package = { features = ["install", "package"], no-default-feature = true }

[tool.pixi.feature.package.tasks]
build_pyi = "pyinstaller bioimageit.spec"
