[project]
name = "bioimageit"
version = "0.3.59"
description = "A FAIR data management and image analysis framework"
authors = [{name = "Arthur Masson", email = "arthur.masson@inria.fr"}]
license = { file = "LICENSE" }
# requires-python = ">= 3.10.2, <3.11"
requires-python = "==3.10.8"
dependencies = ["simpleitk>=2.3.1, <2.4",
                "qtpy>=2.4.1,<3",
                "blinker>=1.8.2,<2",
                "keyring>=25.2.1,<26",
                "pandas>=2.2.2,<3",
                "pyside6>=6.7.2,<7", 
                "pyside6-qtads>=4.3.0.2,<5", 
                "munch>=4.0.0,<5", 
                "send2trash>=1.8.3,<2", 
                "mailjet-rest>=1.3.4,<2", 
                "typing-extensions==4.12.2", 
                "psutil>=6.1.0,<7", 
                "pyyaml>=6.0.2,<7",
                "scipy>=1.15.1,<2",
                "matplotlib>=3.10,<4"
                ]

[project.optional-dependencies]
install = ["pyinstaller>=6.11.1,<6.12"]
package = ["requests>=2.32.3, <2.33", "psutil>=6.1.0,<7", "pyyaml>=6.0.2,<7", "typing-extensions==4.12.2"]
dev = ["ipython", "ipdb", "pip", "setuptools"]
docs = ["sphinx", "sphinx-autobuild", "myst-parser", "furo"]

[tool.pixi.feature.package.dependencies]
python = "3.12.*"

[tool.pixi.feature.docs.dependencies]
python = "3.12.*"

[tool.pixi.dependencies]
omero-py = "==5.15.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.setuptools.package-dir]
biit = "PyFlow"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

# Environments
[tool.pixi.environments]
default = { solve-group = "default" }
install = { features = ["install"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
package = { features = ["install", "package"], no-default-feature = true }
docs = { features = ["docs"], no-default-feature = true }

[tool.pixi.feature.package.tasks]
build = "pyinstaller bioimageit.spec"

[tool.pixi.feature.dev.tasks]
test = "ipython -m unittest --pdb PyFlow/Tests/Test_Tools.py"
